[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Misc/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bat.gd" type="Script" id=4]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "Fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.0
height = 6.0

[sub_resource type="CircleShape2D" id=5]
radius = 80.0

[sub_resource type="GDScript" id=6]
script/source = "extends Node2D

onready var start_position = global_position
onready var target_position = global_position setget ,get_target_position

func get_target_position():
	return target_position

func update_target_position():
	var target_vector = Vector2(rand_range(-32, 32), rand_range(-32, 32))
	target_position = start_position + target_vector

func _on_StateTimer_timeout():
	update_target_position()
"

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
max_health = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
hframes = 5

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fly"
anims/Fly = SubResource( 2 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -13 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 5 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WanderController" type="Node2D" parent="."]
script = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 7 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="StateTimer" to="WanderController" method="_on_StateTimer_timeout"]

[editable path="SoftCollision"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
